--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,20 @@
 name: Continuous Integration - Reusable
 on: [workflow_call]
 jobs:
-  call-continuous-integration-reusable:
-    uses: devops-prac1/github-reusable-workflows/.github/workflows/ci.yml@main
-#
+  CI_Steps:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code Checkout
+        uses: actions/checkout@v4
+      - run: echo OK
+        name: Code Lint
+      - run : npm install
+        name: Install NodeJS modules
+      - run: npm run test:unit
+        name: Code Unit Tests
+      - run: npm run test:integration
+        name: Code Integration Tests
+      - run: echo OK
+        name: Code Review
+      - run: echo OK
+        name: Release Software
