--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,47 @@
 name: Continuous Integration - Reusable
-on: [workflow_call]
+on:
+  workflow_call:
+    inputs:
+      project_name:
+        required: true
+        type: string
+      npm_install:
+        required: true
+        type: boolean
+    secrets:
+      vault_token:
+        required: true
 jobs:
   CI_Steps:
     runs-on: [self-hosted]
     steps:
       - name: Code Checkout
         uses: actions/checkout@v4
+
+
       - run: echo OK
         name: Code Lint
+
+      - name: Import Vault Secrets
+        id: vault-secrets
+        uses: hashicorp/vault-action@v2
+        with:
+          url: https://vault.priya9sdr.online:8200/
+          token: ${{ secrets.vault_token }}
+          tlsSkipVerify: true
+          secrets: |
+              common/data/common sonarqube_user | sonarqube_user;
+              common/data/common sonarqube_password | sonarqube_password ;
+
+
       - run : npm install
         name: Install NodeJS modules
+
       - run: echo npm run test:unit
         name: Code Unit Tests
       - run: echo npm run test:integration
         name: Code Integration Tests
-      - run: echo OK
+      - run: echo /opt/sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner -Dsonar.host.url=http://sonarqube-internal.priya9sdr.online:9000 -Dsonar.projectKey=${{ inputs.project_name }} -Dsonar.qualitygate.wait=true
         name: Code Review
       - run: echo OK
         name: Release Software
