--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,6 @@ jobs:
       - name: Code Checkout
         uses: actions/checkout@v4
 
-
-      - run: echo OK
-        name: Code Lint
-
       - name: Import Vault Secrets
         id: vault-secrets
         uses: hashicorp/vault-action@v2
@@ -33,15 +29,23 @@ jobs:
               common/data/common sonarqube_user | sonarqube_user;
               common/data/common sonarqube_password | sonarqube_password ;
 
+      - run: echo OK
+        name: Code Lint
 
       - run : npm install
         name: Install NodeJS modules
 
       - run: echo npm run test:unit
         name: Code Unit Tests
+
+
       - run: echo npm run test:integration
         name: Code Integration Tests
-      - run: echo /opt/sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner -Dsonar.host.url=http://sonarqube-internal.priya9sdr.online:9000 -Dsonar.projectKey=${{ inputs.project_name }} -Dsonar.qualitygate.wait=true
+
+
+      - run: /opt/sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner -Dsonar.host.url=http://sonarqube-internal.priya9sdr.online:9000 -Dsonar.projectKey=${{ inputs.project_name }} -Dsonar.qualitygate.wait=true -Dsonar.login=${{ steps.vault-secrets.outputs.sonarqube_user }} -Dsonar.password=${{ steps.vault-secrets.outputs.sonarqube_password }}
         name: Code Review
+
+
       - run: echo OK
         name: Release Software
