enabling support for disabling the nodejs (npm install)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,11 @@ on:
       project_name:
         required: true
         type: string
+
       npm_install:
         required: true
         type: boolean
+
     secrets:
       vault_token:
         required: true
@@ -34,6 +36,7 @@ jobs:
 
       - run : npm install
         name: Install NodeJS modules
+        if: ${{ inputs.npm_install }}
 
       - run: echo npm run test:unit
         name: Code Unit Tests
