--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - run: echo OK
         name: Code Lint
 
-      - run : npm install
+      - run : echo npm install
         name: Install NodeJS modules
         if: ${{ inputs.npm_install }}
 
@@ -46,9 +46,10 @@ jobs:
         name: Code Integration Tests
 
 
-      - run: /opt/sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner -Dsonar.host.url=http://sonarqube-internal.priya9sdr.online:9000 -Dsonar.projectKey=${{ inputs.project_name }} -Dsonar.qualitygate.wait=true -Dsonar.login=${{ steps.vault-secrets.outputs.sonarqube_user }} -Dsonar.password=${{ steps.vault-secrets.outputs.sonarqube_password }}
+      - run: echo/opt/sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner -Dsonar.host.url=http://sonarqube-internal.priya9sdr.online:9000 -Dsonar.projectKey=${{ inputs.project_name }} -Dsonar.qualitygate.wait=true -Dsonar.login=${{ steps.vault-secrets.outputs.sonarqube_user }} -Dsonar.password=${{ steps.vault-secrets.outputs.sonarqube_password }}
         name: Code Review
 
 
       - run: echo OK
         name: Release Software
+        if: ${{ startsWith(github.ref, 'refs/tags/') }}
