--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,22 +34,20 @@ jobs:
       - run: echo OK
         name: Code Lint
 
-      - run : echo npm install
-        name: Install NodeJS modules
-        if: ${{ inputs.npm_install }}
-
-      - run: echo npm run test:unit
+      - run: env
+        #echo npm run test:unit
         name: Code Unit Tests
 
 
-      - run: echo npm run test:integration
-        name: Code Integration Tests
 
-
-      - run: echo/opt/sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner -Dsonar.host.url=http://sonarqube-internal.priya9sdr.online:9000 -Dsonar.projectKey=${{ inputs.project_name }} -Dsonar.qualitygate.wait=true -Dsonar.login=${{ steps.vault-secrets.outputs.sonarqube_user }} -Dsonar.password=${{ steps.vault-secrets.outputs.sonarqube_password }}
-        name: Code Review
-
-
-      - run: echo OK
-        name: Release Software
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
+#      - run: echo npm run test:integration
+#        name: Code Integration Tests
+#
+#
+#      - run: echo/opt/sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner -Dsonar.host.url=http://sonarqube-internal.priya9sdr.online:9000 -Dsonar.projectKey=${{ inputs.project_name }} -Dsonar.qualitygate.wait=true -Dsonar.login=${{ steps.vault-secrets.outputs.sonarqube_user }} -Dsonar.password=${{ steps.vault-secrets.outputs.sonarqube_password }}
+#        name: Code Review
+#
+#
+#      - run: echo OK
+#        name: Release Software
+#        if: ${{ startsWith(github.ref, 'refs/tags/') }}
